--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-markupsafe
-Flask
-nltk
-nose
-pymongo
-bashlex
+bashlex==0.6
+Flask==0.10.1
+MarkupSafe==0.23
+mock==1.0.1
+nltk==3.0.2
+nose==1.3.7
+pymongo==2.7
